@@ -5,6 +5,7 @@
 - BUG: The slider positions could be restored incorrectly in the commit and
        log dialog. (Stefan)
 - BUG: The merge ranges were not properly sorted for a rev-range merge. (Stefan)
+- BUG: Switching the left/right view in TortoiseMerge lost edits. (Stefan)
 - CHG: Client-side hook scripts are now called with the predefined parameters
        in a predefined order. (Stefan)
 
